tests/valid/test08_formula_compleja.ml
// Test 08: Fórmula matemática compleja
func formula(a, b, c) {
    return a * a - 2 * b + c;
}
res = formula(3, 5, 7);
print(res);
